Fixed more html

--- a/_posts/2010-01-23-and-so-it-begins-project350zcom-now-has-a-project.html
+++ b/_posts/2010-01-23-and-so-it-begins-project350zcom-now-has-a-project.html
@@ -8,20 +8,60 @@ categories:
 redirect_from: 
     - "/Blog/itemId/461/And-so-it-begins-Project350zcom-now-has-a-projec"
 ---
-<p>So begins the latest project, <a href="http://www.projectquattro.com" target="_blank">Projectquattro.com</a> has been disposed of, after the incident a few weeks ago, where it took out a light pole, it was time for the car to go. I ended up not getting it repaired, it was actually going to cost just less than we originally paid for it, so instead, we traded it in tonight!</p>
+<p>So begins the latest project, <a href="http://www.projectquattro.com" target="_blank">Projectquattro.com</a> has been disposed of, after the incident a few weeks ago, where it took out a light pole, it was time for the car to go. I ended up not getting
+    it repaired, it was actually going to cost just less than we originally paid for it, so instead, we traded it in tonight!</p>
 
 <p>Woot!</p>
 
 <p>I&rsquo;m back in autocross mode with a 2004 Nissan 350Z Enthusiast, and here she is.</p>
 
-<p><a href="http://www.flickr.com/photos/chammond/4297068944/" target="_blank"><img alt="" src="http://farm5.static.flickr.com/4062/4297068944_77490c3a58_m.jpg" /></a></p>
+<p>
+    <a href="http://www.flickr.com/photos/chammond/4297068944/" target="_blank">
+        <img alt="" src="http://farm5.static.flickr.com/4062/4297068944_77490c3a58_m.jpg" />
+    </a>
+</p>
 
-<p>You might think, hey, wait a minute, isn&rsquo;t that the same car you had back when? Well, not quite. My previous 350z was a 2003 Enthusiast. What&rsquo;s the difference? Well between 2k3 and 2k4, not much, 2k4 I believe is less buggy, the only physical difference i know of is that the 2004 has pads next to your leg on the center console, and a power plug under the passenger side of the dashboard. </p>
+<p>You might think, hey, wait a minute, isn&rsquo;t that the same car you had back when? Well, not quite. My previous 350z was a 2003 Enthusiast. What&rsquo;s the difference? Well between 2k3 and 2k4, not much, 2k4 I believe is less buggy, the only physical
+    difference i know of is that the 2004 has pads next to your leg on the center console, and a power plug under the passenger side of the dashboard.</p>
 
-<p>Now, the differences between my old 2003 and my new 2004, here they are (differences as of time of purchase of the 2004, and time of sale of the 2003).</p>  <table border="0" cellspacing="0" cellpadding="2" width="783">      <tbody>          <tr>              <td valign="top" style="width: 339px;"><strong>2003</strong></td>              <td valign="top" style="width: 442px;"><strong>2004</strong></td>          </tr>          <tr>              <td valign="top" style="width: 339px;">              <ul>                  <li>Koni Double Adjustable Shocks </li>                  <li>Custom Swaybar </li>                  <li>17&rdquo; OEM Wheels </li>                  <li>NISMO X-pipe </li>                  <li>Custom trailer hitch </li>              </ul>              </td>              <td valign="top" style="width: 442px;">              <ul>                  <li>18&rdquo; OEM Wheels from a Performance Model </li>                  <li>Injen Super SES Exhaust </li>                  <li>Pioneer Stereo, custom subwoofers and amplifier </li>                  <li>Unknown carbon fiber front splitter </li>                  <li>Unknown carbon fiber rear spoiler </li>                  <li>Carbon fiber accents in Engine bay </li>              </ul>              </td>          </tr>      </tbody>  </table>  <p>&nbsp;</p>
+<p>Now, the differences between my old 2003 and my new 2004, here they are (differences as of time of purchase of the 2004, and time of sale of the 2003).</p>
+<table border="0" cellspacing="0" cellpadding="2" width="783">
+    <tbody>
+        <tr>
+            <td valign="top" style="width: 339px;"><strong>2003</strong>
+            </td>
+            <td valign="top" style="width: 442px;"><strong>2004</strong>
+            </td>
+        </tr>
+        <tr>
+            <td valign="top" style="width: 339px;">
+                <ul>
+                    <li>Koni Double Adjustable Shocks</li>
+                    <li>Custom Swaybar</li>
+                    <li>17&rdquo; OEM Wheels</li>
+                    <li>NISMO X-pipe</li>
+                    <li>Custom trailer hitch</li>
+                </ul>
+            </td>
+            <td valign="top" style="width: 442px;">
+                <ul>
+                    <li>18&rdquo; OEM Wheels from a Performance Model</li>
+                    <li>Injen Super SES Exhaust</li>
+                    <li>Pioneer Stereo, custom subwoofers and amplifier</li>
+                    <li>Unknown carbon fiber front splitter</li>
+                    <li>Unknown carbon fiber rear spoiler</li>
+                    <li>Carbon fiber accents in Engine bay</li>
+                </ul>
+            </td>
+        </tr>
+    </tbody>
+</table>
+<p>&nbsp;</p>
 
-<p>So what comes next? Well, more modifications to get the car ready for the STR Street Touring Roadster class in the SCCA. When I&rsquo;ll get to all those I&rsquo;m not sure. I&rsquo;m going to try to go over the car thoroughly tomorrow in the garage, see if there are any other custom parts I don&rsquo;t know about. At some point in the coming weeks I&rsquo;ll come up with a list of things I need to get done to the car before the full blown autocross season starts up.</p>
+<p>So what comes next? Well, more modifications to get the car ready for the STR Street Touring Roadster class in the SCCA. When I&rsquo;ll get to all those I&rsquo;m not sure. I&rsquo;m going to try to go over the car thoroughly tomorrow in the garage,
+    see if there are any other custom parts I don&rsquo;t know about. At some point in the coming weeks I&rsquo;ll come up with a list of things I need to get done to the car before the full blown autocross season starts up.</p>
 
-<p>Also tomorrow I&rsquo;ve got a guy coming to take a look at the <a href="http://www.project240z.com" target="_blank">Project240z</a>. I would like to keep that, but I know I shouldn&rsquo;t, I won&rsquo;t ever get it finished, especially now that I have this 350z! </p>
+<p>Also tomorrow I&rsquo;ve got a guy coming to take a look at the <a href="http://www.project240z.com" target="_blank">Project240z</a>. I would like to keep that, but I know I shouldn&rsquo;t, I won&rsquo;t ever get it finished, especially now that I have
+    this 350z!</p>
 
 <p>On January 30th I&rsquo;m going to take the <a href="http://www.project350z.com/" target="_blank">Project350z</a> out to its first Autocross.</p>
