--- a/_posts/2011-02-04-350z-bsp-parts-configuration.html
+++ b/_posts/2011-02-04-350z-bsp-parts-configuration.html
@@ -8,17 +8,47 @@ categories:
 redirect_from: 
     - "/Blog/itemId/495/350z-BSP-Parts-Configuration"
 ---
-<p>This post will be a continually updated (on project350z.com) list of parts (to buy) and configuration for the 350z preparation for SCCA Solo&rsquo;s BSP (B street prepared) Class. If you&rsquo;re building a 350z for Autocross I hope that this page provides of some great value.</p>
+<p>This post will be a continually updated (on project350z.com) list of parts (to buy) and configuration for the 350z preparation for SCCA Solo&rsquo;s BSP (B street prepared) Class. If you&rsquo;re building a 350z for Autocross I hope that this page provides
+    of some great value.</p>
 
-<p>Each part will be marked as Planned or Installed depending on the current status. In no particular order:</p>  <h2>Wheels</h2>  <ul>      <li><a href="http://www.project350z.com/Articles/itemId/496/Wheels-for-a-BSP-350z-ARP-Studs-Sway-Bars.aspx">Enkei Racing RPF1 <s>18x9.5/10.5 +15</s>&nbsp;18"x10" +38 Black&nbsp;</a></li>
-<li>NISMO/ARP studs (INSTALLED 2/12/11)</li>  </ul>  <h2>Tires</h2>  <ul>      <li>Hoosier Racing A6 (Size TBD, Probably 315s, Planned) </li>  </ul>  <h2>Suspension</h2>  <ul>      <li>Hotchkis Front/Rear Swaybars (<s>Planned</s>/<s>Purchased</s>/Installed 2/13/11) </li>
-<li>The rest, unknown but I need the following</li>
-<li>Shocks</li>
-<li>Springs</li>
-<li>Camber/Toe adjustment</li>  </ul>  <h2>Drivetrain</h2>  <ul>      <li>OS Giken Differential (Planned) </li>  </ul>  <h2>Engine</h2>  <ul>      <li>K&amp;N CAI (Installed) </li>
-<li>Plenum Spacer (Installed)</li>
-<li>Plenum (Planned) </li>
-<li>ECU Tune (Planned) </li>  </ul>  <h2>Weight Savings</h2>  <ul>      <li>Stereo/Speaker Removal (completed) </li>
-<li>Race Seats (Planned) </li>
-<li>Battery Relocation (Planned) </li>
-<li>Smaller Battery (Planned) </li>  </ul>  <h2>Other</h2>  <ul>      <li>TBD </li>  </ul>
+<p>Each part will be marked as Planned or Installed depending on the current status. In no particular order:</p>
+<h2>Wheels</h2> 
+<ul>
+    <li><a href="http://www.project350z.com/Articles/itemId/496/Wheels-for-a-BSP-350z-ARP-Studs-Sway-Bars.aspx">Enkei Racing RPF1 <s>18x9.5/10.5 +15</s>&nbsp;18"x10" +38 Black&nbsp;</a>
+    </li>
+    <li>NISMO/ARP studs (INSTALLED 2/12/11)</li>
+</ul>
+<h2>Tires</h2> 
+<ul>
+    <li>Hoosier Racing A6 (Size TBD, Probably 315s, Planned)</li>
+</ul>
+<h2>Suspension</h2> 
+<ul>
+    <li>Hotchkis Front/Rear Swaybars (<s>Planned</s>/<s>Purchased</s>/Installed 2/13/11)</li>
+    <li>The rest, unknown but I need the following</li>
+    <li>Shocks</li>
+    <li>Springs</li>
+    <li>Camber/Toe adjustment</li>
+</ul>
+<h2>Drivetrain</h2> 
+<ul>
+    <li>OS Giken Differential (Planned)</li>
+</ul>
+<h2>Engine</h2> 
+<ul>
+    <li>K&amp;N CAI (Installed)</li>
+    <li>Plenum Spacer (Installed)</li>
+    <li>Plenum (Planned)</li>
+    <li>ECU Tune (Planned)</li>
+</ul>
+<h2>Weight Savings</h2> 
+<ul>
+    <li>Stereo/Speaker Removal (completed)</li>
+    <li>Race Seats (Planned)</li>
+    <li>Battery Relocation (Planned)</li>
+    <li>Smaller Battery (Planned)</li>
+</ul>
+<h2>Other</h2> 
+<ul>
+    <li>TBD</li>
+</ul>
