--- a/_posts/2011-02-05-wheels-for-a-bsp-350z-arp-studs-sway-bars.html
+++ b/_posts/2011-02-05-wheels-for-a-bsp-350z-arp-studs-sway-bars.html
@@ -8,11 +8,16 @@ categories:
 redirect_from: 
     - "/Blog/itemId/496/Wheels-for-a-BSP-350z-ARP-Studs-Sway-Bars"
 ---
-<p>So now that wheels and tires (used) are taken care of, at least for part of the season, I need to locate some longer/stronger wheel studs for the 350z. </p>
+<p>So now that wheels and tires (used) are taken care of, at least for part of the season, I need to locate some longer/stronger wheel studs for the 350z.</p>
 
-<p><a href="http://www.flickr.com/photos/chammond/5419830808/"><img style="display: inline; float: right" border="0" alt="Enkei RPF1 18x10 +38" align="right" src="http://farm6.static.flickr.com/5293/5419830808_08eb37234e_m.jpg" width="240" height="180" /></a></p>
+<p>
+    <a href="http://www.flickr.com/photos/chammond/5419830808/">
+        <img style="display: inline; float: right" border="0" alt="Enkei RPF1 18x10 +38" align="right" src="http://farm6.static.flickr.com/5293/5419830808_08eb37234e_m.jpg" width="240" height="180" />
+    </a>
+</p>
 
-<p>On my 2003 350z I had Nismo studs, though they were only on the front, I never got around to putting them on the rear. For this one I could go with the Nismo studs, but it appears a lot of people use ARP studs. So I started looking into what was available there.</p>
+<p>On my 2003 350z I had Nismo studs, though they were only on the front, I never got around to putting them on the rear. For this one I could go with the Nismo studs, but it appears a lot of people use ARP studs. So I started looking into what was available
+    there.</p>
 
 <p>The guy I purchased the wheels and tires from uses studs that have a 1.50 pitch, though stock and the Nismo studs were 1.25.</p>
 
@@ -22,13 +27,24 @@ redirect_from:
 
 <p>Part Number 100-7716 has a knurl (where it goes into the hub) diameter of .565 or ~14.3mm, a length of 3”, knurl length of .270”, and thread size of M12x1.25</p>
 
-<p>I obviously haven’t yet confirmed these fit yet (I’ll update this post when I do), but I’m going to see what I can find for a deal on either of the above part numbers. I’m likely going to need them on my 350z with these new wheels and potentially need spacers as well.</p>
+<p>I obviously haven’t yet confirmed these fit yet (I’ll update this post when I do), but I’m going to see what I can find for a deal on either of the above part numbers. I’m likely going to need them on my 350z with these new wheels and potentially need
+    spacers as well.</p>
 
 <p>The wheels I picked up are Enkei RPF1 18x10” +38 for all four corners. The tires are used Kumho Victoracer V710s 18” 305. Not what I want to run ultimately, but the best option for me right now as they were already mounted on the wheels!</p>
 
-<p>In addition to the wheels and tires I picked up a set of used front and rear Hotchkis sway bars for the 350z. They are the older set, only 3 adjustment points, but they will do for now. </p>
+<p>In addition to the wheels and tires I picked up a set of used front and rear Hotchkis sway bars for the 350z. They are the older set, only 3 adjustment points, but they will do for now.</p>
 
-<p><a href="http://www.flickr.com/photos/chammond/5419227993/"><img style="display: inline; float: right" border="0" alt="New Street Tires" align="right" src="http://farm6.static.flickr.com/5215/5419227993_5718e95cd4_m.jpg" width="180" height="240" /></a>I also picked up some new street tires today as the current ones are getting pretty dangerous in the rain. These are brand new Falken RT615s 265/35R18. Not sure when I will get them mounted, but I’m looking forward to having them on the car. </p>
+<p>
+    <a href="http://www.flickr.com/photos/chammond/5419227993/">
+        <img style="display: inline; float: right" border="0" alt="New Street Tires" align="right" src="http://farm6.static.flickr.com/5215/5419227993_5718e95cd4_m.jpg" width="180" height="240" />
+    </a>I also picked up some new street tires today as the current ones are getting pretty dangerous in the rain. These are brand new Falken RT615s 265/35R18. Not sure when I will get them mounted, but I’m looking forward to having them on the car.</p>
 
-<p>The first event of 2011 for the San Francisco Region SCCA is on the 13th, so a week away. In that time I need to get the following done</ul>
-<p>   <li>Find 20 long studs </li>    <li>Find 20 (+) lug nuts </li>    <li>Find sway bar end links </li>    <li>Install the sway bars </li>    <li>Make sure that the new wheels/tires fit on the car. </li>    <li>Make sure I can fit 4 wheels/tires in the car so I can get to the event. </li> </ul>
+<p>The first event of 2011 for the San Francisco Region SCCA is on the 13th, so a week away. In that time I need to get the following done</p>
+<ul>
+    <li>Find 20 long studs</li>
+    <li>Find 20 (+) lug nuts</li>
+    <li>Find sway bar end links</li>
+    <li>Install the sway bars</li>
+    <li>Make sure that the new wheels/tires fit on the car.</li>
+    <li>Make sure I can fit 4 wheels/tires in the car so I can get to the event.</li>
+</ul>
