--- a/_posts/2015-09-06-project350z-v3-coming-soon.html
+++ b/_posts/2015-09-06-project350z-v3-coming-soon.html
@@ -34,7 +34,7 @@ redirect_from:
 <h2>Mods?</h2> 
 <p>You might think, Chris, if you’re going to prep the car for autocross, why do you want one without mods? A couple of reasons:</p>
 <ol>
-    <li>An unmodded car, is more likely (but not always) to be unmolested, not as abused
+    <li>An unmodded car, is more likely (but not always) to be unmolested, not as abused</li>
         <li>Mods in Autocross change classes on a car, I want to be able to control where the car goes, without having to take it completely apart to see if there are mods I don’t know about and would be illegal in whichever class I choose to build the car
             for.
         </li>
