--- a/_posts/2016-02-29-350z-setup-and-modifications-for-scca-autocross-stu-class.html
+++ b/_posts/2016-02-29-350z-setup-and-modifications-for-scca-autocross-stu-class.html
@@ -36,33 +36,31 @@ redirect_from:
 </ul>
 <p>&nbsp;</p>
 <h3>Engine/Exhaust/Drivetrain</h3> 
-<p>The car came with an intake spacer, this will be removed before the Dixie Tour in Georgia, March 2016.</ul>
-    <p>
-        <li>Intake: Jim Wolf cold air induction, shielded</li>
-        <li>Exhaust: Invidia Gemini, quad tips (added by P/O)</li>
-        <li>Battery: Deka 16# (?)</li>
-        <li>LSD: Tomei 1.5 way locking unit, 85% lock</li>
-        </ul>
-        <p>&nbsp;</p>
-        <h3>Wheels/Tires/Brakes</h3> 
-        <ul>
-            <li>Front Brakes: Hawk HP Plus pads</li>
-            <li>Read Brakes: factory type pads</li>
-            <li>Wheels: XXR 531</li>
-            <li>Tires: 275/35R18 Bridgestone RE-71R</li>
-        </ul>
-        <p>&nbsp;</p>
-        <h3>Interior</h3> 
-        <p>The interior is the Frost interior, originally with the leather,heated,electric seats. The Bose stereo components are mostly removed (AMP, sub, microphone).</ul>
-            <p>
-                <li>Head unit: Pioneer Bluetooth XM-capable double-din touchscreen head unit w/iPod connection</li>
-                <li>Shift knob: Tomei composite</li>
-                <li>Shift boot: Alcantara one from eBay</li>
-                <li>Glass Tint: medium (approx 35%)</li>
-                <li>Seats: <a href="http://soloperformance.com/NRG-Innovations-FRP-300-Racing-Bucket-Seat--Large_p_11672.html" target="_blank">NRG FRP 300</a>
-                </li>
-                </ul>
-            </p>
-        </p>
-    </p>
-</p>
+<p>The car came with an intake spacer, this will be removed before the Dixie Tour in Georgia, March 2016.</p>
+<ul>
+
+    <li>Intake: Jim Wolf cold air induction, shielded</li>
+    <li>Exhaust: Invidia Gemini, quad tips (added by P/O)</li>
+    <li>Battery: Deka 16# (?)</li>
+    <li>LSD: Tomei 1.5 way locking unit, 85% lock</li>
+</ul>
+<p>&nbsp;</p>
+<h3>Wheels/Tires/Brakes</h3> 
+<ul>
+    <li>Front Brakes: Hawk HP Plus pads</li>
+    <li>Read Brakes: factory type pads</li>
+    <li>Wheels: XXR 531</li>
+    <li>Tires: 275/35R18 Bridgestone RE-71R</li>
+</ul>
+<p>&nbsp;</p>
+<h3>Interior</h3> 
+<p>The interior is the Frost interior, originally with the leather,heated,electric seats. The Bose stereo components are mostly removed (AMP, sub, microphone).</p>
+<ul>
+
+    <li>Head unit: Pioneer Bluetooth XM-capable double-din touchscreen head unit w/iPod connection</li>
+    <li>Shift knob: Tomei composite</li>
+    <li>Shift boot: Alcantara one from eBay</li>
+    <li>Glass Tint: medium (approx 35%)</li>
+    <li>Seats: <a href="http://soloperformance.com/NRG-Innovations-FRP-300-Racing-Bucket-Seat--Large_p_11672.html" target="_blank">NRG FRP 300</a>
+    </li>
+</ul>
