--- a/_posts/2016-11-15-stu-2003-nissan-350z-for-sale&ndash;project350z-v3.html
+++ b/_posts/2016-11-15-stu-2003-nissan-350z-for-sale&ndash;project350z-v3.html
@@ -8,11 +8,97 @@ categories:
 redirect_from: 
     - "/Blog/itemId/572/STU-2003-Nissan-350z-For-Sale&ndash;Project350z-"
 ---
-<p><strong>SOLD!</strong></p>
+<p><strong>SOLD!</strong>
+</p>
 <p>2003 Nissan 350z Touring $9000</p>
-<p>Well, the time has come for V3 of Project350z.com to be put up for sale. Before we part it out we will post the car as is, with all the autocross bits installed and attached. If the car doesn&rsquo;t sell in the next week, we will likely start removing all the autocross bits and putting it back to as close to stock as possible. The car was available in St. Louis (Wildwood) Missouri.&nbsp;</p>
-<p><a href="https://www.flickr.com/photos/chammond/albums/72157673098323004" target="_blank">Photos from 11/26/2016</a></p>
-<p><a data-flickr-embed="true" data-footer="true" href="https://www.flickr.com/photos/chammond/albums/72157673098323004" title="2003 Nissan 350z For Sale"><img alt="2003 Nissan 350z For Sale" src="https://c8.staticflickr.com/6/5716/30452905343_9bf09aa672.jpg" width="100%" /></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script></p>
-<p><a href="https://www.instagram.com/project350z/" target="_blank">Pictures available on Instagram</a></p>
-<p><a href="https://www.instagram.com/jd1cameramount/" target="_blank">Videos available on another Instagram account</a></p>    <h3>Why is the car for sale?</h3>    <p>I simply struggled with the car this year. I think the car can be competitive, I had some very competitive runs in it this year, enough to be near the top at National competitions, but I was unable to put multiple good runs in with the car, my head just wasn&rsquo;t in it all year. I need to change, do something else for 2017, maybe even take a year or two off and focus on other things. There&rsquo;s no reason for me to hold on to the car if I&rsquo;m not going to autocross it, so I would rather see it go to someone who will use it.</p>    <h3>What I would do if I were keeping the car?</h3>    <p>If I were going to keep the car, and there is always that chance, what would I do to it for 2017? The remaining projects to get the car fully prepped would include headers and high flow cats, a lighter exhaust, and then a full tune on the car. That is really the only thing I think that is necessary to finish the car off for STU.</p>    <h2>For Sale Details</h2>    <p>Year: 2003<br />  Make: Nissan<br />  Model: 350z Touring<br />  Mileage: 149,000<br />  Color: White<br />  Transmission: Manual (6-speed)</p>    <h2>Price: $9000 (with all the parts below, and anything else I have around)</h2>    <h3>Parts and Modifications list prepped for STU:</h3>    <h5>Front Suspension</h5>    <ul>   <li>Shocks: TrueChoice Phase 4 coilovers&nbsp;</li>   <li>(Removed, but included) ISC threaded-body front shocks. Single-adjustable damping at top of shock, Independently preload-adjustable and height-adjustable.</li>   <li>Front Springs: 650lb Hyperco Springs</li>   <li>(Removed, but included) ISC, 14k rate (784#)</li>   <li>Upper mounts: OEM</li>   <li>(Removed, but included) ISC pillowball, aluminum</li>   <li>Upper control arms: Kinetix, modified by Level Motorsports to optimize camber adjustment</li>   <li>Sway Bar: Hotchkis 3-way adjustable, urethane bushings</li>  </ul>    <h5>Rear Suspension</h5>    <ul>   <li>Shocks: Koni Sport (off the shelf)</li>   <li>(Removed, but included) ISC, single-adjustable damping, threaded body for length adjustment.</li>   <li>Shock mounts: ISC NOT-pillowball, aluminum</li>   <li>Rear Springs: 2.5&quot; id Hyperco, 600# rate</li>   <li>Rear Spring Perches: Megan Racing threaded collar adjustable</li>   <li>Rear Sway Bar: OEM (disconnected)</li>   <li>Rear Camber Arms: Kinetix Racing<br />   Rear Toe Arms: Kinetix Racing (not installed)</li>  </ul>    <h5>Engine/Exhaust/Drivetrain</h5>    <ul>   <li>Intake: Jim Wolf cold air induction, shielded</li>   <li>Exhaust: Invidia Gemini, quad tips (added by P/O)&nbsp;</li>   <li>Battery: Deka 16# (?)</li>   <li>Differential: Tomei 1.5 way locking unit, 85% lock&nbsp;</li>   <li>Intake Spacer: Unknown brand, not class legal, (not installed).</li>  </ul>    <h5>Wheels/Tires</h5>    <ul>   <li>Wheels: Circuit Performance, flat black, 18x10.5 / 1 set (4) of 285-30R18 Bridgestone RE-71R</li>   <li>Wheels: XXR 531(not on car) / 1 set (4) of 275/285-30R18 Bridgestone RE-71R<br />   Pressures: Typically ran 31F and 29R</li>  </ul>    <h5>Interior</h5>    <p>The interior is the Frost interior, originally with the leather,heated,electric seats. The Bose stereo components are mostly removed (AMP, sub, microphone).</p>    <ul>   <li>Head unit: Pioneer Bluetooth XM-capable double-din touchscreen head unit w/iPod connection</li>   <li>Shift knob: Tomei composite</li>   <li>Shift boot: Alcantara one from eBay</li>   <li>Glass Tint: medium (approx 35%)</li>   <li>Seats: <a href="http://soloperformance.com/NRG-Innovations-FRP-300-Racing-Bucket-Seat--Large_p_11672.html">NRG FRP 300</a> (OEM leather/heated&nbsp;seats included in sale)</li>   <li>Extra Floor Mats</li>  </ul>    <h5>Exterior</h5>    <p>Color: White<br />  Top of car covered in black vinyl</p>
-<p>&nbsp;</p>    <h5>Known Issues:</h5>    <ul>   <li>Airbag light on. Likely needs Nissan service to clear the light. Airbag is hooked up.</li>   <li><s>Windshield wiper fluid low</s>.(fixed)</li>   <li>Door panels have been rubbed from the NRG seats, <a href="https://www.flickr.com/photos/chammond/31260598575/in/album-72157673098323004/">see photo</a>.</li>   <li>XXR Wheels are coated in red plastidip type paint, heavy brake dust coating as well.</li>   <li>On the XXR Wheels&nbsp;1 tire is bad, mounted, holds air, but will need replaced.</li>   <li>Fenders have been rolled.</li>   <li>Interior Dash Console cover doesn&#39;t stay closed.</li>   <li>Interior Cup Holder doesn&#39;t work.</li>  </ul>  
+<p>Well, the time has come for V3 of Project350z.com to be put up for sale. Before we part it out we will post the car as is, with all the autocross bits installed and attached. If the car doesn&rsquo;t sell in the next week, we will likely start removing
+    all the autocross bits and putting it back to as close to stock as possible. The car was available in St. Louis (Wildwood) Missouri.&nbsp;</p>
+<p><a href="https://www.flickr.com/photos/chammond/albums/72157673098323004" target="_blank">Photos from 11/26/2016</a>
+</p>
+<p>
+    <a data-flickr-embed="true" data-footer="true" href="https://www.flickr.com/photos/chammond/albums/72157673098323004" title="2003 Nissan 350z For Sale">
+        <img alt="2003 Nissan 350z For Sale" src="https://c8.staticflickr.com/6/5716/30452905343_9bf09aa672.jpg" width="100%" />
+    </a>
+    <script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+</p>
+<p><a href="https://www.instagram.com/project350z/" target="_blank">Pictures available on Instagram</a>
+</p>
+<p><a href="https://www.instagram.com/jd1cameramount/" target="_blank">Videos available on another Instagram account</a>
+</p>
+<h3>Why is the car for sale?</h3> 
+<p>I simply struggled with the car this year. I think the car can be competitive, I had some very competitive runs in it this year, enough to be near the top at National competitions, but I was unable to put multiple good runs in with the car, my head just
+    wasn&rsquo;t in it all year. I need to change, do something else for 2017, maybe even take a year or two off and focus on other things. There&rsquo;s no reason for me to hold on to the car if I&rsquo;m not going to autocross it, so I would rather
+    see it go to someone who will use it.</p>
+<h3>What I would do if I were keeping the car?</h3> 
+<p>If I were going to keep the car, and there is always that chance, what would I do to it for 2017? The remaining projects to get the car fully prepped would include headers and high flow cats, a lighter exhaust, and then a full tune on the car. That is
+    really the only thing I think that is necessary to finish the car off for STU.</p>
+<h2>For Sale Details</h2> 
+<p>Year: 2003
+    <br />Make: Nissan
+    <br />Model: 350z Touring
+    <br />Mileage: 149,000
+    <br />Color: White
+    <br />Transmission: Manual (6-speed)</p>
+<h2>Price: $9000 (with all the parts below, and anything else I have around)</h2> 
+<h3>Parts and Modifications list prepped for STU:</h3> 
+<h5>Front Suspension</h5> 
+<ul>
+    <li>Shocks: TrueChoice Phase 4 coilovers&nbsp;</li>
+    <li>(Removed, but included) ISC threaded-body front shocks. Single-adjustable damping at top of shock, Independently preload-adjustable and height-adjustable.</li>
+    <li>Front Springs: 650lb Hyperco Springs</li>
+    <li>(Removed, but included) ISC, 14k rate (784#)</li>
+    <li>Upper mounts: OEM</li>
+    <li>(Removed, but included) ISC pillowball, aluminum</li>
+    <li>Upper control arms: Kinetix, modified by Level Motorsports to optimize camber adjustment</li>
+    <li>Sway Bar: Hotchkis 3-way adjustable, urethane bushings</li>
+</ul>
+<h5>Rear Suspension</h5> 
+<ul>
+    <li>Shocks: Koni Sport (off the shelf)</li>
+    <li>(Removed, but included) ISC, single-adjustable damping, threaded body for length adjustment.</li>
+    <li>Shock mounts: ISC NOT-pillowball, aluminum</li>
+    <li>Rear Springs: 2.5&quot; id Hyperco, 600# rate</li>
+    <li>Rear Spring Perches: Megan Racing threaded collar adjustable</li>
+    <li>Rear Sway Bar: OEM (disconnected)</li>
+    <li>Rear Camber Arms: Kinetix Racing
+        <br />Rear Toe Arms: Kinetix Racing (not installed)</li>
+</ul>
+<h5>Engine/Exhaust/Drivetrain</h5> 
+<ul>
+    <li>Intake: Jim Wolf cold air induction, shielded</li>
+    <li>Exhaust: Invidia Gemini, quad tips (added by P/O)&nbsp;</li>
+    <li>Battery: Deka 16# (?)</li>
+    <li>Differential: Tomei 1.5 way locking unit, 85% lock&nbsp;</li>
+    <li>Intake Spacer: Unknown brand, not class legal, (not installed).</li>
+</ul>
+<h5>Wheels/Tires</h5> 
+<ul>
+    <li>Wheels: Circuit Performance, flat black, 18x10.5 / 1 set (4) of 285-30R18 Bridgestone RE-71R</li>
+    <li>Wheels: XXR 531(not on car) / 1 set (4) of 275/285-30R18 Bridgestone RE-71R
+        <br />Pressures: Typically ran 31F and 29R</li>
+</ul>
+<h5>Interior</h5> 
+<p>The interior is the Frost interior, originally with the leather,heated,electric seats. The Bose stereo components are mostly removed (AMP, sub, microphone).</p>
+<ul>
+    <li>Head unit: Pioneer Bluetooth XM-capable double-din touchscreen head unit w/iPod connection</li>
+    <li>Shift knob: Tomei composite</li>
+    <li>Shift boot: Alcantara one from eBay</li>
+    <li>Glass Tint: medium (approx 35%)</li>
+    <li>Seats: <a href="http://soloperformance.com/NRG-Innovations-FRP-300-Racing-Bucket-Seat--Large_p_11672.html">NRG FRP 300</a> (OEM leather/heated&nbsp;seats included in sale)</li>
+    <li>Extra Floor Mats</li>
+</ul>
+<h5>Exterior</h5> 
+<p>Color: White
+    <br />Top of car covered in black vinyl</p>
+<p>&nbsp;</p>
+<h5>Known Issues:</h5> 
+<ul>
+    <li>Airbag light on. Likely needs Nissan service to clear the light. Airbag is hooked up.</li>
+    <li><s>Windshield wiper fluid low</s>.(fixed)</li>
+    <li>Door panels have been rubbed from the NRG seats, <a href="https://www.flickr.com/photos/chammond/31260598575/in/album-72157673098323004/">see photo</a>.</li>
+    <li>XXR Wheels are coated in red plastidip type paint, heavy brake dust coating as well.</li>
+    <li>On the XXR Wheels&nbsp;1 tire is bad, mounted, holds air, but will need replaced.</li>
+    <li>Fenders have been rolled.</li>
+    <li>Interior Dash Console cover doesn&#39;t stay closed.</li>
+    <li>Interior Cup Holder doesn&#39;t work.</li>
+</ul>
