--- a/_posts/2016-04-23-the-2016-autocross-season-so-far.html
+++ b/_posts/2016-04-23-the-2016-autocross-season-so-far.html
@@ -14,6 +14,7 @@ redirect_from:
     So it has been a while since I’ve had the time to get a blog post up here, so let’s get started.
 </p>
 
+
 <p>
     After the last post, the car was almost ready for the Dixie National tour, held in Cecil Georgia, but there was some final prep to do. I took the car down to Solo Performance to corner weight and align the thing, with good results.
 </p>
@@ -26,7 +27,7 @@ redirect_from:
 </p>
 
 <h3 align="center">Alignment Specs:</h3>
-<p align="center">
+
     <table cellspacing="0" cellpadding="2" width="500" border="1">
         <tbody>
             <tr>
@@ -61,7 +62,7 @@ redirect_from:
             </tr>
         </tbody>
     </table>
-</p>
+
 
 <p align="center">Total empty weight was with all loose items removed (spare tire, tools, carpeting). Total weight with driver using additional weight to mimic driver.</p>
 
@@ -161,7 +162,8 @@ redirect_from:
     or myself. I am going to try to improve my driving through the use of technology, and the hot tool right now for that in Autocross is an Android app called <a href="http://www.petreldata.com/product/solostorm-gps-obd-ii-and-video-logger-for-android-v2-2/"
     target="_blank">SoloStorm</a>, from <a href="http://www.petreldata.com/" target="_blank">petreldata.com</a>.</p>
 <p>
-    With SoloStorm you can analyze the data from your runs quickly from an Android tablet inside of your car. In the past I’ve tried to look at data from the DL-1, on a laptop, between runs, but it was clunky and not easy enough to do that quickly. With SoloStorm you are able to look at runs, segments, and compare where you are faster or slower, this can be extremely useful when you have two drivers as you can compare your run to the other driver to see where you can each improve.
+    With SoloStorm you can analyze the data from your runs quickly from an Android tablet inside of your car. In the past I’ve tried to look at data from the DL-1, on a laptop, between runs, but it was clunky and not easy enough to do that quickly. With SoloStorm
+    you are able to look at runs, segments, and compare where you are faster or slower, this can be extremely useful when you have two drivers as you can compare your run to the other driver to see where you can each improve.
 </p>
 <p>
     I haven’t used it just yet, I did try to get it working with my old-ass RaceTechnology DL-1, but wasn’t able to get the Tablet (Nexus 7 2013) and the DL-1 talking properly while on the parking lot at the Family Arena. I’m hoping to have the Bluetooth
