deploy: 90214c977c564ba54f7a70f37185fef055edabf3

--- a/page15/index.html
+++ b/page15/index.html
@@ -223,8 +223,8 @@
 										</h2>
 										<h4 class="card-text">
 											This post was originally posted on Solo2.org in June of
-											2004, but the site has gone away (it'll come back) so the
-											post was lost. I think I’ve corrected all...
+											2004, but the site has gone away (it might come back) so
+											the post was lost. I think I’ve corrected...
 										</h4>
 									</div>
 									<div class="card-footer bg-white">
