deploy: a09c3c1a681d31e2ebb97fa633ab5591e64c878f

--- a/index.html
+++ b/index.html
@@ -216,7 +216,17 @@
 											<div class="h-100">
 												<div class="wrapthumbnail">
 													<a href="/looking-for-another-350z">
-														<!-- do something here -->
+														<img
+															class="featured-box-img-cover lazyimg"
+															src="/assets/images_out/i/12-31-12/hg7-800-8b8beb832.jpg"
+															alt="Looking for another 350z"
+															srcset="
+																/assets/images_out/i/12-31-12/hg7-400-8b8beb832.jpg   400w,
+																/assets/images_out/i/12-31-12/hg7-600-8b8beb832.jpg   600w,
+																/assets/images_out/i/12-31-12/hg7-800-8b8beb832.jpg   800w,
+																/assets/images_out/i/12-31-12/hg7-1000-8b8beb832.jpg 1000w
+															"
+														/>
 													</a>
 												</div>
 											</div>
@@ -284,7 +294,19 @@
 							<div class="col-lg-4 col-md-6 mb-30px card-group">
 								<div class="card h-100">
 									<div class="maxthumb">
-										<a href="/looking-for-another-350z"> </a>
+										<a href="/looking-for-another-350z">
+											<img
+												class="img-fluid"
+												src="/assets/images_out/i/12-31-12/hg7-800-8b8beb832.jpg"
+												alt="Looking for another 350z"
+												srcset="
+													/assets/images_out/i/12-31-12/hg7-400-8b8beb832.jpg   400w,
+													/assets/images_out/i/12-31-12/hg7-600-8b8beb832.jpg   600w,
+													/assets/images_out/i/12-31-12/hg7-800-8b8beb832.jpg   800w,
+													/assets/images_out/i/12-31-12/hg7-1000-8b8beb832.jpg 1000w
+												"
+											/>
+										</a>
 									</div>
 									<div class="card-body">
 										<h2 class="card-title">
