--- a/page15/index.html
+++ b/page15/index.html
@@ -213,7 +213,19 @@
 							<div class="col-lg-4 col-md-6 mb-30px card-group">
 								<div class="card h-100">
 									<div class="maxthumb">
-										<a href="/350z-koni-shock-install"> </a>
+										<a href="/350z-koni-shock-install">
+											<img
+												class="img-fluid"
+												src="/assets/images_out/ProjectZ/KoniInstall/350Z-Koni-Install-1-800-dfd1c82ff.jpg"
+												alt="350Z Koni Shock Install"
+												srcset="
+													/assets/images_out/ProjectZ/KoniInstall/350Z-Koni-Install-1-400-dfd1c82ff.jpg   400w,
+													/assets/images_out/ProjectZ/KoniInstall/350Z-Koni-Install-1-600-dfd1c82ff.jpg   600w,
+													/assets/images_out/ProjectZ/KoniInstall/350Z-Koni-Install-1-800-dfd1c82ff.jpg   800w,
+													/assets/images_out/ProjectZ/KoniInstall/350Z-Koni-Install-1-1000-dfd1c82ff.jpg 1000w
+												"
+											/>
+										</a>
 									</div>
 									<div class="card-body">
 										<h2 class="card-title">
