--- a/2004-nissan-350z-enthusiast-model-for-sale-half-moon-bay-ca-sold.html
+++ b/2004-nissan-350z-enthusiast-model-for-sale-half-moon-bay-ca-sold.html
@@ -300,23 +300,24 @@
 									The time is nearing for when the 350z must be sold, so if you
 									are interested hit me up 2004 350z Enthusiast, &lt;75k miles,
 									currently sits stock other than a K&amp;N CAI and a Plenum
-									spacer, and a grounding kit (installed by previous owner).<br />
+									spacer, and a grounding kit (installed by previous owner).
+									<br />
 									<br />
 									Also has a receiver mounted to the rear bumper that I use for
-									a bike rack.<br />
+									a bike rack. <br />
 									<br />
 									The car is well maintained, looks great with lower than usual
-									wear and tear of an 8 year old car.<br />
+									wear and tear of an 8 year old car. <br />
 									<br />
 									I also have the suspension still in boxes, see previous posts
 									for more details, but TrueChoice Koni DAs up front and SA Koni
 									Sports in the rear with springs/perches for the rear. This
 									will be sold separate from the car, unless the buyer wants it
-									for additional $$.<br />
+									for additional $$. <br />
 									<br />
 									Car is located in Half Moon Bay, CA, and available for
 									purchase at $9,000, if you want the suspension throw in
-									another grand and you can have it all.<br />
+									another grand and you can have it all.
 								</div>
 
 								<!-- Rating -->
